test/tasty/neg/src-2/TestCompiletimeQuoteType.check
TestCompiletimeQuoteType_fail.scala:4: error: Unsupported Scala 3 context function type in result: scala.quoted.Quotes ?=> scala.quoted.Type[T]; found in method of in object scala.quoted.Type.
  def test = CompiletimeQuoteType.f[Int]
                                   ^
1 error
